# repro-lambda

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  SETUP.md  USAGE.md  pyproject.toml  release-please-config.json
.github/workflows/: build.yml  ci.yml  move-major-tag.yml  promote.yml  publish.yml  release.yml
assets/: social-preview.html
examples/complete/: README.md  lambdas.toml  main.tf  outputs.tf  variables.tf
examples/complete/builds/: catalog.json
examples/complete/src/app/: app.py
src/repro_lambda/: __init__.py  __main__.py  build.py  catalog.py  cli.py  docker_runner.py  git_guard.py  hasher.py  manifest.py  promote.py  s3_uploader.py  source_locker.py  source_stager.py  sources.py  verify.py  zip_packager.py
tests/: conftest.py  test_build_integration.py  test_build_nodejs.py  test_catalog.py  test_cli_build.py  test_cli_lock.py  test_cli_smoke.py  test_docker_runner.py  test_docker_runner_nodejs.py  test_e2e_nodejs_lambda.py  test_e2e_python_lambda.py  test_extra_files.py  test_git_guard.py  test_hasher.py  test_manifest.py  test_per_lambda_builder.py  test_promote.py  test_python_byte_compat_regression.py  test_s3_uploader.py  test_source_locker.py  test_source_stager.py  test_sources.py  test_sources_hash.py  test_sources_schema.py  test_verify.py  test_zip_excludes.py  test_zip_packager.py
tests/fixtures/sample_nodejs_lambda/: lambdas.toml
tests/fixtures/sample_nodejs_lambda/handler/: index.js  package-lock.json  package.json
tests/fixtures/sample_python_lambda/: lambdas.toml
