[project]
name = "repro-lambda"
version = "0.6.0"
description = "Build reproducible AWS Lambda packages outside Terraform, optimized for terraform-aws-lambda by serverless.tf."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Anton Babenko", email = "anton@antonbabenko.com" }]
keywords = ["aws", "lambda", "terraform", "reproducible-builds", "serverless"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "typer>=0.12",
  "repro-zipfile>=0.3.1",
  "boto3>=1.34",
  "tomlkit>=0.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-mock>=3.12",
  "moto[s3]>=5",
  "ruff>=0.5",
  "pre-commit>=3.7",
  "pyyaml>=6",
]

[project.scripts]
repro-lambda = "repro_lambda.cli:app"

[project.urls]
Homepage = "https://github.com/antonbabenko/repro-lambda"
Repository = "https://github.com/antonbabenko/repro-lambda"
Issues = "https://github.com/antonbabenko/repro-lambda/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repro_lambda"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Shell-script string literals inside docker_runner cannot be line-wrapped.
"src/repro_lambda/docker_runner.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = ["docker: requires docker daemon"]
